# vertx-boost

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle  dependencies.yaml  maven.bzl  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/gutmox/: Main.java  MainVerticle.java
src/main/java/com/gutmox/domain/: User.java
src/main/java/com/gutmox/repositories/: UsersRepository.java
src/main/java/com/gutmox/soap/: SoapParser.java
src/main/java/com/gutmox/soap/model/: GetOrdersHistoryResponse.java  OrderStatus.java  Statue.java
src/main/java/util/: Constant.java
src/test/java/com/gutmox/: RestClientTest.java  SimpleTest.java
src/test/java/com/gutmox/domain/: UsersTest.java
src/test/java/com/gutmox/repositories/: UsersRepositoryTest.java
