load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_pull",
    "container_push",
)

java_library(
    name = "all-external-targets",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@third_party//3rdparty/jvm/io/vertx:vertx_core",
        "@third_party//3rdparty/jvm/io/vertx:vertx_web",
        "@third_party//3rdparty/jvm/io/vertx:vertx_rx_java2",
        "@third_party//3rdparty/jvm/io/reactivex/rxjava2:rxjava"
    ],
)

java_binary(
    name = "service",
    main_class = "io.vertx.core.Launcher",
    args = ["run com.gutmox.MainVerticle"],
    deploy_manifest_lines = ["Main-Verticle: com.gutmox.MainVerticle"],
    visibility = ["//visibility:public"],
    runtime_deps = [":all-external-targets"],
)

container_image(
    name = "container",
    base = "@openjdk//image",
    cmd = [
        "java",
        "-jar",
        "service_deploy.jar",
    ],
    env = {
        "TZ": "Europe/Madrid",
        "VERTX_CONFIG_PATH": "/config.yaml",
    },
    files = [
        ":service_deploy.jar",
    ],
)